# atmospheric-sensor

./: Cargo.toml  README.md
atmospheric-sensor-nrf52/: Cargo.toml
atmospheric-sensor-nrf52/.cargo/: config.toml
atmospheric-sensor-nrf52/src/: main.rs
atmospheric-sensor-nucleo/: Cargo.toml
atmospheric-sensor-nucleo/.cargo/: config.toml
atmospheric-sensor-nucleo/src/: main.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
linux-sensor-client/: Cargo.toml
linux-sensor-client/src/: main.rs
linux-sensor-sim/: Cargo.toml
linux-sensor-sim/src/: lib.rs  main.rs
serial-protocol/: Cargo.toml
serial-protocol/src/: lib.rs  msg.rs
