[package]
name = "linux-sensor-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "^4.0"
tokio = { version = "^1.6", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"]}