[package]
name = "linux-sensor-sim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = "0.1.4"
nix = "0.19"
tokio = { version = "^1.6", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"] }