[package]
name = "linux-sensor-sim"
version = "0.1.0"
edition = "2018"

[dependencies]
async-channel = "^1.6"
cobs = "0.1.4"
nix = "0.19"
postcard = { version = "0.7", features = ["use-std"] }
serial-protocol = { path = "../serial-protocol" }
tokio = { version = "^1.6", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }